tests/errors/Dima/select_not_from_struct.c
struct id
{
	char lastname[20];   
	char firstname[20]; 
	int year;
};


int main()
{
	struct id structura;
	int structu;
	structu.year;
	//hh // нужно раскомментить для корректного чтения дальнейшего кода
	return 0;
}